# coco

./: .gitignore  Cargo.toml  README.md  build_firmware.bat  build_firmware.sh  memory.x  setup_mac_linux.sh  setup_windows.bat
.cargo/: config.toml
src/: acia.rs  assembler.rs  audio_test.rs  config.rs  cpu.rs  cpu_test.rs  debug.rs  devmgr.rs  dm_test.rs  error.rs  hex.rs  instructions.rs  lib.rs  macros.rs  main.rs  memory.rs  obj.rs  parse.rs  pia.rs  pico.rs  program.rs  registers.rs  runtime.rs  sam.rs  sound.rs  test.rs  u8oru16.rs  vdg.rs  vdg_test.rs
src/input/: mod.rs  ps2.rs  usb.rs
src/term/: mod.rs  unix.rs
