[package]
name = "coco"
version = "0.1.0"
edition = "2021"

[dependencies]
minifb = { version = "0.23.0", optional = true }
clap = { version = "4.0.10", features = ["derive"], optional = true }
clap-num = { version = "1.0.2", optional = true }
lazy_static = { version = "1.4.0", optional = true }
regex = { version = "1.5", optional = true }
serde = { version = "1.0.152", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_yaml = { version = "0.9.17", optional = true }
cpal = { version = "0.15.0", optional = true }
spin = "0.9.4"
rp235x-hal = { version = "0.4.0", features = [
    "rt",
    "critical-section-impl",
    "defmt",
] }
[target.'cfg(target_os = "none")'.dependencies]
pico-dvi-rs = { path = "vendor/pico-dvi-rs" }
embedded-hal = "1.0.0"
critical-section = "1.1.2"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
embedded-alloc = "0.5.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
# Input dependencies
pio = "0.3.0"
pio-proc = "0.3.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.42.0", features = [
    "Win32_System_Console",
    "Win32_Foundation",
] }

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the binary size on flash
lto = true        # link time optimization
opt-level = "s"   # optimize for size
panic = "abort"   # remove stack unwinding code

[[test]]
name = "dm-test"
path = "src/dm_test.rs"
harness = false

[[bin]]
name = "coco"
path = "src/pico.rs"
